<resources>
    <string name="app_name">SHELL SHOCK</string>
    <string name="app">SHELL SHOCK</string>
    <string name="account">Cuenta</string>
    <string name="password">Contraseña</string>
    <string name="name">Nombre del cliente</string>
    <string name="address">Dirección de entrega</string>
    <string name="phone">Número de telefono</string>
    <string name="product">Prodcutos disponibles</string>
    <string name="price">Precio del producto</string>
    <string name="local">Nacional</string>
    <string name="strange">Internacional</string>
    <string name="informacion">SHELL SHOCK es una tienda en línea que ofrece una amplia gama de artículos únicos y variados para satisfacer los gustos más exigentes. Desde gadgets tecnológicos de última generación hasta accesorios de moda exclusivos, SHELL SHOCK tiene todo lo que necesitas para destacar. Además, la tienda se enorgullece de ofrecer productos de alta calidad a precios competitivos, con envíos rápidos y seguros a cualquier parte del mundo. Su sitio web intuitivo y fácil de navegar permite a los clientes encontrar rápidamente lo que buscan, mientras que el servicio al cliente está siempre disponible para resolver cualquier duda. SHELL SHOCK también se destaca por ofrecer ofertas y promociones regulares, haciendo que la experiencia de compra sea aún más emocionante.</string>
</resources>